[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moleculines"
version = "0.1.0"
description = "Personal library for analysis of molecular lines"
authors = [
    { name = "Maria Jose Colmenares", email = "mjcolmen@umich.edu" }
]
readme = "README.md"
license = { text = "MIT license" } # adjust if you use a different license
requires-python = ">=3.8"           # set the minimum Python version you support

# -------------------------------------------------
# Copy the packages you would otherwise put in requirements.txt 
dependencies = [
    "numpy",
    "astropy",
"matplotlib"
]

# -------------------------------------------------
# Optional: Development‑only dependencies (e.g., testing, linting)
[project.optional-dependencies]
dev = ["pytest>=7.0"]

# -------------------------------------------------
# Tell setuptools where the source lives
[tool.setuptools.packages.find]
where = ["moleculines"]       # where the main source code lives
